--- a/understanding-and-predicting-player-engagement-in-online-games.ipynb
+++ b/understanding-and-predicting-player-engagement-in-online-games.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "### 🎯 Project Objective\n",
     "\n",
-    "The primary aim of this project is to explore how behavioral patterns, gameplay preferences, and demographic factors contribute to player engagement. This project will look at:\n",
+    "The primary aim of this project is to explore how behavioral patterns, gameplay preferences, and demographic factors contribute to player engagement. This project will look at:k\n",
     "\n",
     "1. **Key Engagement Drivers 🔑**  \n",
     "   Identify features that most influence engagement, such as frequency, achievements, and session duration.\n",
@@ -27,9 +27,9 @@
     "   Help game developers and marketing teams tailor their strategies to boost engagement and retention.\n",
     "\n",
     "4. **Engagement Tactics 🧩**  \n",
-    "   Recommend targeted strategies such as personalized rewards, adaptive challenges, or curated content to keep players involved longer.g strategies**, and **player retention**. 🚀\r\n",
-    "\r\n",
-    "\r\n"
+    "   Recommend targeted strategies such as personalized rewards, adaptive challenges, or curated content to keep players involved longer.g strategies**, and **player retention**. 🚀\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -466,7 +466,7 @@
     "- The dataset is **clean**, with **no missing values** in any column.  \n",
     "- It includes **7 numerical** and **5 categorical** features.  \n",
     "- Categorical variables such as `Gender`, `Location`, `GameGenre`, `GameDifficulty`, and `EngagementLevel` will require **encoding** before modeling.  \n",
-    "- The presence of rich behavioral features enables both **exploratory analysis** and the development of **predictive models** aimed at understanding and improving player engagement. analysis.\r\n"
+    "- The presence of rich behavioral features enables both **exploratory analysis** and the development of **predictive models** aimed at understanding and improving player engagement. analysis.\n"
    ]
   },
   {
@@ -2292,7 +2292,7 @@
     "- **Player Level**: Higher levels are linked to purchases. Non-purchasers are clustered at lower levels.\n",
     "\n",
     "- **Achievements**: More achievements unlocked = more likely to purchase. High engagement + high achievements often go hand-in-hand.\n",
-    "ement and potential spending.\r\n"
+    "ement and potential spending.\n"
    ]
   },
   {
@@ -3059,7 +3059,7 @@
     "\n",
     "4. **Minimal to No Impact**\n",
     "   - Features like `GameDifficulty`, `InGamePurchases`, `Age`, and `Location` show negligible correlation.  \n",
-    "     → These don’t directly influence engagement level._nfluence engagement.\r\n"
+    "     → These don’t directly influence engagement level._nfluence engagement.\n"
    ]
   },
   {
