--- a/understanding-and-predicting-player-engagement-in-online-games.ipynb
+++ b/understanding-and-predicting-player-engagement-in-online-games.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "### 🎯 Project Objective\n",
     "\n",
-    "The primary aim of this project is to explore how behavioral patterns, gameplay preferences, and demographic factors contribute to player engagement. This project will look at:k\n",
+    "The primary aim of this project is to explore how behavioral patterns, gameplay preferences, and demographic factors contribute to player engagement. This project will look at:\n",
     "\n",
     "1. **Key Engagement Drivers 🔑**  \n",
     "   Identify features that most influence engagement, such as frequency, achievements, and session duration.\n",
